[package]
name = "lettersmith"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ls_load"
path = "src/bin/ls_load.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
glob = "0.3.1"
pulldown-cmark = "0.12.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tap = "1.0.1"
tempfile = "3.12.0"
toml = "0.8.19"
