[package]
name = "lettersmith"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smith"
path = "src/bin/smith.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
glob = "0.3.1"
pulldown-cmark = "0.12.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
tap = "1.0.1"
tempfile = "3.12.0"
tera = "1.20.0"
